test_scores/negative_dimers/features/Q9H4M7.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9H4M7.pkl.xz